Add main image, cover text, touched up some other elements

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
             </nav>
         </div>
     </header>
-    <section><!--Main image goes here-->
-
+    <section id="image-section"><!--Main image goes here-->
+        <div id="main-image"></div>
+        <div id="covering-text">
+            <h2>Cycling 101</h2>
+            <h3>Take it all in</h3>
+        </div>
     </section>
     <section><!--About adn testimonial goes here-->
 
