Add content in about section and styled it

--- a/index.html
+++ b/index.html
@@ -45,8 +45,20 @@
             <h3>Take it all in</h3>
         </div>
     </section>
-    <section><!--About adn testimonial goes here-->
-
+    <section id="about"><!--About adn testimonial goes here-->
+        <h2>Welcome to Cycling 101</h2>
+        <div id="outer-contianer">
+            <div id="about-container">
+                <p>Here you will find all that you need to help you on your way, from beginners to novice we provide all the nesscary info for all your cycling needs.</p>
+            </div>
+            <div id="quote-container">
+                <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
+            </div>
+        </div>
+        <div id="click-here">
+            <h3>Ready to find out more</h3>
+            <a id="goButton" href="#">Click Here!</a>
+        </div>
     </section>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
