--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div id="click-here">
             <h3>Ready to find out more</h3>
-            <a id="goButton" href="#">Click Here!</a>
+            <a class="goButton" href="#">Click Here!</a>
         </div>
     </section>
     <footer><!--Footer will contain links to social media-->
