Add fix for broken links

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                         <a href="index.html" class="open">Home</a>
                     </li>
                     <li>
-                        <a href="#">Equipment</a>
+                        <a href="equipment.html">Equipment</a>
                     </li>
                     <li>
-                        <a href="#">Route</a>
+                        <a href="route.html">Route</a>
                     </li>
                     <li>
-                        <a href="#">Sign Up</a>
+                        <a href="signup.html">Sign Up</a>
                     </li>
                 </ul>
             </nav>
