Add structure to equipment page and route page

--- a/equipment.html
+++ b/equipment.html
@@ -9,6 +9,9 @@
 
     <link rel="stylesheet" href="Assests/CSS/styles.css">
     <title>Cycling 101</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <header><!--Header contains Logo(linked) and symbol of bike-->
@@ -38,6 +41,32 @@
             </nav>
         </div>
     </header>
+    <section><!--Bike section-->
+        <div class="main-section">
+
+        </div>
+    </section>
+    <section>
+        <div class="main-section"><!--Remove inline style-->
+
+        </div><!--Clothes section-->
+    </section>
+    <section><!--Essentials section-->
+        <div class="main-section">
+            <div class="one-third-box" id="left">
+                <h2>The Helmat</h2>
+            </div>
+            <div class="one-third-box" id="center">
+                <h2>The Pump</h2>
+            </div>
+            <div class="one-third-box" id="right">
+                <h2>The Tools</h2>
+            </div>
+        </div>
+    </section>
+    <section><!--Map section-->
+
+    </section>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
         <ul class="media-links">
