--- a/route.html
+++ b/route.html
@@ -38,6 +38,22 @@
             </nav>
         </div>
     </header>
+    <section><!--Route choice section-->
+        <div class="main-section">
+            <h2>How to choose a route</h2>
+        </div>
+    </section>
+    <section><!--Route Suggestion section-->
+        <div class="main-section">
+            <div class="one-third-box" id="left">
+                <h2>Route 1</h2>
+            </div>
+            <div class="one-third-box" id="center">
+                <h2>Route 2</h2>
+            </div>
+            <div class="one-third-box" id="right">
+                <h2>Route 3</h2>
+            </div>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
         <ul class="media-links">
