--- a/equipment.html
+++ b/equipment.html
@@ -42,8 +42,27 @@
         </div>
     </header>
     <section><!--Bike section-->
-        <div class="main-section">
-
+        <div class="main-section" id="bike-section">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>The Bicycle</h2><!--All content here has been taken from Britannica Website-->
+            <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
+                Bicycles are widely used for transportation, recreation, and sport.</p>
+            <p>Cycling, use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it kits you fit and active all whilst taking in either the local landscape or foreign landscape.</p>
+            <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types. Road Racing, Mountain and Hybrid Bikes.</p>
+            <h3>Road Racing Bike</h3>
+            <p>designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
+            </p>
+            <h3>Mountain Bike</h3>
+            <p>have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
+            </p>
+            <h3>Hybrid Bikes</h3>
+            <p>Hybrid bicycles combine the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
+            <h3>Useful links</h3>
+            <ul>
+                <li>Click here for more information on the<a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the road racing bike(Opens in new tab)">Road Racing Bike</a></li>
+                <li>Click here for more information on the<a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the mountain bike(Opens in new tab)">Mountain Bike</a></li>
+                <li>Click here for more information on the<a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the hybrid bike(Opens in new tab)">Hybrid Bike</a></li>
+            </ul>
         </div>
     </section>
     <section>
