--- a/equipment.html
+++ b/equipment.html
@@ -42,9 +42,9 @@
         </div>
     </header>
     <section><!--Bike section-->
-        <div class="main-section" id="bike-section">
+        <div class="main-section" id="bike-clothing-section">
             <h2>The Bicycle</h2>
-            <div id="bike-section-text">
+            <div id="main-section-text">
                 <!--All content here has been taken from Britannica Website-->
                 <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
                     Bicycles are widely used for transportation, recreation, and sport.</p>
@@ -70,10 +70,18 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="main-section"><!--Remove inline style-->
-
-        </div><!--Clothes section-->
+    <section><!--Clothes section-->
+        <div class="main-section" id="bike-clothing-section"><!--Content here take from Road.cc-->
+            <h2>Clothing</h2>
+            <div id="main-section-text">
+                <p>Clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
+                <p><h3>Jerseys</h3> Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
+                    Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
+            </div>
+            <div id="clothing-section-image">
+                <img src="Assests/Images/jersey-image.jpg" height="560" width="315" alt="Man on bicycle wearing a white jersey">
+            </div>
+        </div>
     </section>
     <section><!--Essentials section-->
         <div class="main-section">
