Add content for Pump section and added a border back to all divs to test visiblity

--- a/equipment.html
+++ b/equipment.html
@@ -100,6 +100,10 @@
             </div>
             <div class="one-third-box" id="right">
                 <h2>The Tools</h2>
+                <img src="Assests/Images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings"><!--Image was taken from Machine Mart website-->
+                <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must.</p>
+                <p>In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
+                Click<a href="#" target="_blank" rel="noopener" aria-label="Click here for more information on tools(Opens in a new tab)">Here</a>for more information on tools.
             </div>
         </div>
     </section>
