Add map section to equipment page and styled, add structure for form on sign up page

--- a/equipment.html
+++ b/equipment.html
@@ -107,8 +107,10 @@
             </div>
         </div>
     </section>
-    <section><!--Map section-->
-
+    <section id="map-section">
+        <h2>Bike Shop</h2>
+        <p>Below we have provided a map for you to see where there are some bike shops in the locality.</p><!--Map section-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d60000.25946300302!2d-5.9147547215103415!3d54.59092788880417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbike%20shops%20in%20belfast!5e0!3m2!1sen!2sie!4v1625218740171!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
