--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,17 @@
             </nav>
         </div>
     </header>
+    <section class="main-section">
+        <form action="https://formdump.codeinstitute.net/" method="POST" class="details-form">
+            <h2>Tell us your details!</h2>
+            <label for="frname">First Name:</label>
+            <input type="text" name="first_name" id="frname" class="form-input" required>
+            <label for="laname">Last Name:</label>
+            <input type="text" name="last_name" id="laname" class="form-input" required>
+            <label for="eaddress">Email Address:</label>
+            <input type="email" name="email_address" id="eaddress" class="form-input" required>
+        </form>
+    </section>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
         <ul class="media-links">
