--- a/signup.html
+++ b/signup.html
@@ -47,6 +47,8 @@
             <input type="text" name="last_name" id="laname" class="form-input" required>
             <label for="eaddress">Email Address:</label>
             <input type="email" name="email_address" id="eaddress" class="form-input" required>
+
+            <input type="submit" value="Sign Up!" class="goButton">
         </form>
     </section>
     <footer><!--Footer will contain links to social media-->
