Add styling for sig up form structure

--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
     </header>
-    <section class="main-section">
+    <section class="main-section" id="sign-up">
         <form action="https://formdump.codeinstitute.net/" method="POST" class="details-form">
             <h2>Tell us your details!</h2>
             <label for="frname">First Name:</label>
@@ -48,7 +48,7 @@
             <label for="eaddress">Email Address:</label>
             <input type="email" name="email_address" id="eaddress" class="form-input" required>
 
-            <input type="submit" value="Sign Up!" class="goButton">
+            <input type="submit" value="Sign Up!" class="goButton" id="form-button">
         </form>
     </section>
     <footer><!--Footer will contain links to social media-->
