Add touching up styles to form page, Add content to route page

--- a/signup.html
+++ b/signup.html
@@ -41,13 +41,18 @@
     <section class="main-section" id="sign-up">
         <form action="https://formdump.codeinstitute.net/" method="POST" class="details-form">
             <h2>Tell us your details!</h2>
-            <label for="frname">First Name:</label>
-            <input type="text" name="first_name" id="frname" class="form-input" required>
-            <label for="laname">Last Name:</label>
-            <input type="text" name="last_name" id="laname" class="form-input" required>
-            <label for="eaddress">Email Address:</label>
-            <input type="email" name="email_address" id="eaddress" class="form-input" required>
-
+            <div>
+                <label for="frname">First Name:</label>
+                <input type="text" name="first_name" id="frname" class="form-input" required>
+            </div>
+            <div>
+                <label for="laname">Last Name:</label>
+                <input type="text" name="last_name" id="laname" class="form-input" required>
+            </div>
+            <div>
+                <label for="eaddress">Email Address:</label>
+                <input type="email" name="email_address" id="eaddress" class="form-input" required>
+            </div>
             <input type="submit" value="Sign Up!" class="goButton" id="form-button">
         </form>
     </section>
