--- a/route.html
+++ b/route.html
@@ -39,8 +39,15 @@
         </div>
     </header>
     <section><!--Route choice section-->
-        <div class="main-section">
-            <h2>How to choose a route</h2>
+        <div class="main-section"><!--Information here taken from the cycling weekly website on route selection-->
+            <div>
+                <h2>How to choose a route</h2>
+                <p>When choosing a route to cycle, most people will follow a main road way or the most popular route. These selections are fine, but they will always be busy with either other cyclists or cars.
+                    To really get a sense of adventure and the thrill of discovering new land scape, there area few options to choosing a route.
+                </p>
+                <p><h4>Take Side Roads</h4> By taking side roads, you can avoid most of the traffic that comes with cycling on main roads. Meaning you can keep up a decent pace and take in the landscape. Even slow down at times when there is something beautiful to look at.</p>
+                <p><h4>Take a look at local maps</h4> By Looking at local maps of your area you can see what side roads to take and where there are hills possibly to avoid.</p>
+            </div>
         </div>
     </section>
     <section><!--Route Suggestion section-->
