Add image to route page

--- a/route.html
+++ b/route.html
@@ -40,13 +40,18 @@
     </header>
     <section><!--Route choice section-->
         <div class="main-section"><!--Information here taken from the cycling weekly website on route selection-->
-            <div>
+            <div id="route-section-text">
                 <h2>How to choose a route</h2>
                 <p>When choosing a route to cycle, most people will follow a main road way or the most popular route. These selections are fine, but they will always be busy with either other cyclists or cars.
                     To really get a sense of adventure and the thrill of discovering new land scape, there area few options to choosing a route.
                 </p>
                 <p><h4>Take Side Roads</h4> By taking side roads, you can avoid most of the traffic that comes with cycling on main roads. Meaning you can keep up a decent pace and take in the landscape. Even slow down at times when there is something beautiful to look at.</p>
                 <p><h4>Take a look at local maps</h4> By Looking at local maps of your area you can see what side roads to take and where there are hills possibly to avoid.</p>
+                <p><h4>Get suggestions from other riders</h4> By asking other riders for suggestions you can get the best routes as other riders may be fairly experianced and will tell you the best ways to go. To find other riders you can join clubs or pop into local cycling shops and ask.</p>
+                <p><h4>A Map</h4> Take a map with you, it is the most easiest and straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
+            </div>
+            <div id="route-section-img">
+                <img src="Assests/Images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
             </div>
         </div>
     </section>
