Add sizing styles to route page image

--- a/route.html
+++ b/route.html
@@ -50,7 +50,7 @@
                 <p><h4>Get suggestions from other riders</h4> By asking other riders for suggestions you can get the best routes as other riders may be fairly experianced and will tell you the best ways to go. To find other riders you can join clubs or pop into local cycling shops and ask.</p>
                 <p><h4>A Map</h4> Take a map with you, it is the most easiest and straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
             </div>
-            <div id="route-section-img">
+            <div id="route-section-image">
                 <img src="Assests/Images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
             </div>
         </div>
