--- a/route.html
+++ b/route.html
@@ -56,9 +56,11 @@
         </div>
     </section>
     <section><!--Route Suggestion section-->
-        <div class="main-section">
+        <div class="main-section"><!--Routes taken from all trails, links to route provided at bottom-->
             <div class="one-third-box" id="left">
                 <h2>Route 1</h2>
+                <p>This route takes you from CS Lewis square in East Belfast to Comber, using the Comber Greenway. It is an easy route and very safe.</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d38023.11458174982!2d-5.851053449558181!3d54.56534515755178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x48610975a21e69ab%3A0x8de4d08e58098ce6!2sBelfast%20BT5%205BQ!3m2!1d54.596858!2d-5.886393099999999!4m5!1s0x48610b4458a1149f%3A0x174d2ab9d447862!2sComber%2C%20Newtownards!3m2!1d54.550454699999996!2d-5.7456751!5e1!3m2!1sen!2suk!4v1625578148994!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="one-third-box" id="center">
                 <h2>Route 2</h2>
@@ -66,6 +68,7 @@
             <div class="one-third-box" id="right">
                 <h2>Route 3</h2>
             </div>
+        </div>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
         <ul class="media-links">
