Add positioning styles too Route suggestion box

--- a/route.html
+++ b/route.html
@@ -58,22 +58,34 @@
     <section><!--Route Suggestion section-->
         <div class="main-section"><!--Routes taken from all trails, links to route provided at bottom-->
             <div class="one-third-box" id="left">
-                <h2>Route 1</h2>
-                <p>This route takes you from CS Lewis square in East Belfast to Comber, using the Comber Greenway. It is an easy route and very safe.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d38023.11458174982!2d-5.851053449558181!3d54.56534515755178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x48610975a21e69ab%3A0x8de4d08e58098ce6!2sBelfast%20BT5%205BQ!3m2!1d54.596858!2d-5.886393099999999!4m5!1s0x48610b4458a1149f%3A0x174d2ab9d447862!2sComber%2C%20Newtownards!3m2!1d54.550454699999996!2d-5.7456751!5e1!3m2!1sen!2suk!4v1625578148994!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
+                <div class="route-text">
+                    <h2>Route 1</h2>
+                    <p>This route takes you from CS Lewis square in East Belfast to Comber, using the Comber Greenway. It is an easy route and very safe.</p>
+                </div>
+                <div class="route-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d38023.11458174982!2d-5.851053449558181!3d54.56534515755178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x48610975a21e69ab%3A0x8de4d08e58098ce6!2sBelfast%20BT5%205BQ!3m2!1d54.596858!2d-5.886393099999999!4m5!1s0x48610b4458a1149f%3A0x174d2ab9d447862!2sComber%2C%20Newtownards!3m2!1d54.550454699999996!2d-5.7456751!5e1!3m2!1sen!2suk!4v1625578148994!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
+                </div>
             </div>
             <div class="one-third-box" id="center">
-                <h2>Route 2</h2>
-                <p>This route is a circular route on Cave Hill, you can take it either way, and it is a moderate cycling.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7977.9226105487805!2d-5.95204371814857!3d54.644122436472884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1625580684568!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/cavehill-circular" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
+                <div class="route-text">
+                    <h2>Route 2</h2>
+                    <p>This route is a circular route on Cave Hill, you can take it either way, and it is a moderate cycling.</p>
+                </div>
+                <div class="route-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7977.9226105487805!2d-5.95204371814857!3d54.644122436472884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1625580684568!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/cavehill-circular" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
+                </div>
             </div>
             <div class="one-third-box" id="right">
-                <h2>Route 3</h2>
-                <p>This route is a very easy route for those with any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. It is mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d63980.576985956424!2d-6.0400339434433175!3d54.54393585903106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x4861098d6dbce215%3A0x5ada80f51fbe5057!2sLagan%20Tow%20Path%2C%20Stranmillis%20Embankment%2C%20Belfast%20BT9%205FL!3m2!1d54.5701739!2d-5.9278357999999995!4m5!1s0x4860fd87d4a2c71d%3A0xc297ab8d94f3183b!2sLisburn!3m2!1d54.516245999999995!2d-6.058010599999999!5e1!3m2!1sen!2suk!4v1625580890635!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/lagan-towpath?mobileMap=false&ref=sidebar-static-map" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
+                <div class="route-text">
+                    <h2>Route 3</h2>
+                    <p>This route is a very easy route for those with any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. It is mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
+                </div>
+                <div class="route-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d63980.576985956424!2d-6.0400339434433175!3d54.54393585903106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x4861098d6dbce215%3A0x5ada80f51fbe5057!2sLagan%20Tow%20Path%2C%20Stranmillis%20Embankment%2C%20Belfast%20BT9%205FL!3m2!1d54.5701739!2d-5.9278357999999995!4m5!1s0x4860fd87d4a2c71d%3A0xc297ab8d94f3183b!2sLisburn!3m2!1d54.516245999999995!2d-6.058010599999999!5e1!3m2!1sen!2suk!4v1625580890635!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/lagan-towpath?mobileMap=false&ref=sidebar-static-map" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
+                </div>
             </div>
         </div>
     <footer><!--Footer will contain links to social media-->
