Add structural changes to Index page, and styled go button

--- a/index.html
+++ b/index.html
@@ -45,19 +45,27 @@
             <h3>Take it all in</h3>
         </div>
     </section>
-    <section id="about"><!--About adn testimonial goes here-->
+    <section class="main-home-section"><!--About adn testimonial goes here-->
         <h2>Welcome to Cycling 101</h2>
-        <div id="outer-contianer">
-            <div id="about-container">
-                <p>Here you will find all that you need to help you on your way, from beginners to novice we provide all the nesscary info for all your cycling needs.</p>
-            </div>
-            <div id="quote-container">
-                <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
+        <div class="outer-container">
+            <div class="about-quote-container about-quote-color">
+                <article>
+                    <p>Here you will find all that you need to help you on your way, from beginners to novice we provide all the nesscary info for all your cycling needs.</p>
+                </article>
+                <div id="go-button">
+                    <a class="goButton" href="equipment.html">Find Out More</a>
+                </div>
             </div>
         </div>
-        <div id="click-here">
-            <h3>Ready to find out more</h3>
-            <a class="goButton" href="#">Click Here!</a>
+        <div class="outer-container">
+            <div class="about-quote-container about-quote-color">
+                <article>
+                    <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
+                </article>
+                <div id="go-button">
+                    <a class="goButton" href="equipment.html">Find Out More</a>
+                </div>
+            </div>
         </div>
     </section>
     <footer><!--Footer will contain links to social media-->
