Add flex box styling to divs on index page to display correctly

--- a/index.html
+++ b/index.html
@@ -49,17 +49,21 @@
         <h2>Welcome to Cycling 101</h2>
         <div class="outer-container">
             <div class="about-quote-container about-quote-color">
-                <article>
-                    <p>Here you will find all that you need to help you on your way, from beginners to novice we provide all the nesscary info for all your cycling needs.</p>
-                </article>
+                <div>
+                    <article>
+                        <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
+                    </article>
+                </div>
                 <div id="go-button">
                     <a class="goButton" href="equipment.html">Find Out More</a>
                 </div>
             </div>
             <div class="about-quote-container about-quote-color">
-                <article>
-                    <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
-                </article>
+                <div>
+                    <article>
+                        <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
+                    </article>
+                </div>
                 <div id="go-button">
                     <a class="goButton" href="equipment.html">Find Out More</a>
                 </div>
