Add flex box and some styling to bike section on equipment page

--- a/equipment.html
+++ b/equipment.html
@@ -41,38 +41,40 @@
             </nav>
         </div>
     </header>
-    <section><!--Bike section-->
-        <div class="main-section" id="bike-clothing-section">
-            <h2>The Bicycle</h2>
-            <div id="main-section-text">
+    <section id="bike-clothing-section"><!--Bike section-->
+        <h2>The Bicycle</h2>
+        <div class="main-section">
+            <div class="main-section-text main-box-color">
                 <!--All content here has been taken from Britannica Website-->
-                <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
+                <article>
+                    <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
                     Bicycles are widely used for transportation, recreation, and sport.</p>
-                <p>Cycling, use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it kits you fit and active all whilst taking in either the local landscape or foreign landscape.</p>
-                <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types. Road Racing, Mountain and Hybrid Bikes.</p>
-                <h3>Road Racing Bike</h3>
-                <p>designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
-                </p>
-                <h3>Mountain Bike</h3>
-                <p>have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
-                </p>
-                <h3>Hybrid Bikes</h3>
-                <p>Hybrid bicycles combine the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
-                <h3>Useful links:</h3>
-            <ul>
-                <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the road racing bike(Opens in new tab)">Road Racing Bike</a></li>
-                <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the mountain bike(Opens in new tab)">Mountain Bike</a></li>
-                <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the hybrid bike(Opens in new tab)">Hybrid Bike</a></li>
-            </ul>
+                    <p>Cycling, use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it kits you fit and active all whilst taking in either the local landscape or foreign landscape.</p>
+                    <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types. Road Racing, Mountain and Hybrid Bikes.</p>
+                    <h3>Road Racing Bike</h3>
+                    p>designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
+                    </p>
+                    <h3>Mountain Bike</h3>
+                    <p>have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
+                    </p>
+                    <h3>Hybrid Bikes</h3>
+                    <p>Hybrid bicycles combine the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
+                    <h3>Useful links:</h3>
+                </article>
+                <ul>
+                    <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the road racing bike(Opens in new tab)">Road Racing Bike</a></li>
+                    <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the mountain bike(Opens in new tab)">Mountain Bike</a></li>
+                    <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the hybrid bike(Opens in new tab)">Hybrid Bike</a></li>
+                </ul>
             </div>
-            <div id="bike-section-video">
+            <div class="bike-section-media">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
-    <section><!--Clothes section-->
-        <div class="main-section" id="bike-clothing-section"><!--Content here take from Road.cc-->
-            <h2>Clothing</h2>
+    <section id="bike-clothing-section"><!--Clothes section-->
+        <h2>Clothing</h2>
+        <div class="main-section"><!--Content here take from Road.cc-->
             <div id="main-section-text">
                 <p>Clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
                 <p><h3>Jerseys</h3> Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
