--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="main-home-section"><!--About adn testimonial goes here-->
         <h2>Welcome to Cycling 101</h2>
         <div class="outer-container">
-            <div class="about-quote-container about-quote-color">
+            <div class="about-quote-container main-box-color">
                 <div>
                     <article>
                         <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
@@ -58,7 +58,7 @@
                     <a class="goButton" href="equipment.html">Find Out More</a>
                 </div>
             </div>
-            <div class="about-quote-container about-quote-color">
+            <div class="about-quote-container main-box-color">
                 <div>
                     <article>
                         <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
