Add last bits of flex styling to equipment page, styling to images, add styling to route page

--- a/route.html
+++ b/route.html
@@ -38,9 +38,9 @@
             </nav>
         </div>
     </header>
-    <section><!--Route choice section-->
+    <section class="block-section"><!--Route choice section-->
         <div class="main-section"><!--Information here taken from the cycling weekly website on route selection-->
-            <div id="route-section-text">
+            <div class="main-section-text main-box-color">
                 <h2>How to choose a route</h2>
                 <p>When choosing a route to cycle, most people will follow a main road way or the most popular route. These selections are fine, but they will always be busy with either other cyclists or cars.
                     To really get a sense of adventure and the thrill of discovering new land scape, there area few options to choosing a route.
@@ -50,14 +50,14 @@
                 <p><h4>Get suggestions from other riders</h4> By asking other riders for suggestions you can get the best routes as other riders may be fairly experianced and will tell you the best ways to go. To find other riders you can join clubs or pop into local cycling shops and ask.</p>
                 <p><h4>A Map</h4> Take a map with you, it is the most easiest and straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
             </div>
-            <div id="route-section-image">
+            <div class="bike-section-media">
                 <img src="Assests/Images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
             </div>
         </div>
     </section>
-    <section><!--Route Suggestion section-->
-        <div class="main-section"><!--Routes taken from all trails, links to route provided at bottom-->
-            <div class="one-third-box" id="left">
+    <section class="main-section"><!--Route Suggestion section-->
+        <div class="three-box-section"><!--Routes taken from all trails, links to route provided at bottom-->
+            <div class="one-third-box main-box-color">
                 <div class="route-text">
                     <h2>Route 1</h2>
                     <p>This route takes you from CS Lewis square in East Belfast to Comber, using the Comber Greenway. It is an easy route and very safe.</p>
@@ -67,7 +67,7 @@
                     Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
                 </div>
             </div>
-            <div class="one-third-box" id="center">
+            <div class="one-third-box main-box-color">
                 <div class="route-text">
                     <h2>Route 2</h2>
                     <p>This route is a circular route on Cave Hill, you can take it either way, and it is a moderate cycling.</p>
@@ -77,10 +77,10 @@
                     Click<a href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/cavehill-circular" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">Here</a>for more information on the route in All Trails.
                 </div>
             </div>
-            <div class="one-third-box" id="right">
+            <div class="one-third-box main-box-color">
                 <div class="route-text">
                     <h2>Route 3</h2>
-                    <p>This route is a very easy route for those with any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. It is mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
+                    <p>An easy route for any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. Mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
                 </div>
                 <div class="route-map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d63980.576985956424!2d-6.0400339434433175!3d54.54393585903106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x4861098d6dbce215%3A0x5ada80f51fbe5057!2sLagan%20Tow%20Path%2C%20Stranmillis%20Embankment%2C%20Belfast%20BT9%205FL!3m2!1d54.5701739!2d-5.9278357999999995!4m5!1s0x4860fd87d4a2c71d%3A0xc297ab8d94f3183b!2sLisburn!3m2!1d54.516245999999995!2d-6.058010599999999!5e1!3m2!1sen!2suk!4v1625580890635!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -88,6 +88,7 @@
                 </div>
             </div>
         </div>
+    </section>
     <footer><!--Footer will contain links to social media-->
         <h3>&copy Cycling 101</h3>
         <ul class="media-links">
