--- a/equipment.html
+++ b/equipment.html
@@ -41,12 +41,12 @@
             </nav>
         </div>
     </header>
-    <section id="bike-clothing-section"><!--Bike section-->
-        <h2>The Bicycle</h2>
+    <section><!--Bike section-->
         <div class="main-section">
             <div class="main-section-text main-box-color">
                 <!--All content here has been taken from Britannica Website-->
                 <article>
+                    <h2>The Bicycle</h2>
                     <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
                     Bicycles are widely used for transportation, recreation, and sport.</p>
                     <p>Cycling, use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it kits you fit and active all whilst taking in either the local landscape or foreign landscape.</p>
@@ -72,35 +72,35 @@
             </div>
         </div>
     </section>
-    <section id="bike-clothing-section"><!--Clothes section-->
-        <h2>Clothing</h2>
+    <section><!--Clothes section-->
         <div class="main-section"><!--Content here take from Road.cc-->
             <div class="main-section-text main-box-color">
+                <h2>Clothing</h2>
                 <p>Clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
                 <p><h3>Jerseys</h3> Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
                     Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
                 <p><h3>Padded Shorts</h3>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
             </div>
             <div class="bike-section-media">
-                <img src="Assests/Images/jersey-image.jpg"  alt="Man on bicycle wearing a white jersey">
+                <img src="Assests/Images/clothing-pic_adobespark.jpg" alt="Man on bike pedalling towards camera">
             </div>
         </div>
     </section>
     <section class="main-section"><!--Essentials section-->
         <div class="three-box-section">
-            <div class="one-third-box"><!--Info taken from Wiki-->
+            <div class="one-third-box main-box-color"><!--Info taken from Wiki-->
                 <h2>The Helmat</h2>
                 <img src="Assests/Images/Types_of_Bicycle_Helmets.png" alt="Pictue of three different type bike helmets">
                 <p>A bicycle helmet is a type of helmet designed to attenuate impacts to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
                 Click<a href="#" target="_blank" rel="noopener" aria-label="Click here for more information on the helmet(Opens in a new tab)">Here</a>for more information on helmets.
             </div>
-            <div class="one-third-box">
+            <div class="one-third-box main-box-color">
                 <h2>The Pump</h2>
                 <img src="Assests/Images/bike-pumps.jpg" alt="A picture of a bicycle pump">
                 <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always hand to take with you on a ride.</p>
                 Click<a href="#" target="_blank" rel="noopener" aria-label="Click here for more information on the Pump(Opens in a new tab)">Here</a>for more information on pumps.
             </div>
-            <div class="one-third-box">
+            <div class="one-third-box main-box-color">
                 <h2>The Tools</h2>
                 <img src="Assests/Images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings"><!--Image was taken from Machine Mart website-->
                 <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must.</p>
