Add Buttons to all sections and styled them

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
                     </article>
                 </div>
-                <div id="go-button">
+                <div class="go-button">
                     <a class="goButton" href="equipment.html">Find Out More</a>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
                     </article>
                 </div>
-                <div id="go-button">
+                <div class="go-button">
                     <a class="goButton" href="equipment.html">Find Out More</a>
                 </div>
             </div>
