--- a/equipment.html
+++ b/equipment.html
@@ -61,11 +61,17 @@
                     <p>Hybrid bicycles combine the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
                     <h3>Useful links:</h3>
                 </article>
-                <ul>
-                    <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the road racing bike(Opens in new tab)">Road Racing Bike</a></li>
-                    <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the mountain bike(Opens in new tab)">Mountain Bike</a></li>
-                    <li><a href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the hybrid bike(Opens in new tab)">Hybrid Bike</a></li>
-                </ul>
+                <div class="button">
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the road racing bike(Opens in new tab)">Road Racing Bike</a>
+                    </div>
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the mountain bike(Opens in new tab)">Mountain Bike</a> 
+                    </div>
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the hybrid bike(Opens in new tab)">Hybrid Bike</a>
+                    </div>
+                </div>
             </div>
             <div class="bike-section-media">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -75,14 +81,24 @@
     <section><!--Clothes section-->
         <div class="main-section"><!--Content here take from Road.cc-->
             <div class="main-section-text main-box-color">
+                <article>
                 <h2>Clothing</h2>
                 <p>Clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
                 <p><h3>Jerseys</h3> Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
                     Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
                 <p><h3>Padded Shorts</h3>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
+                </article>
+                <div class="button">
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Jerseys(Opens in new tab)">Jerseys</a>
+                    </div>
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Padded Shorts(Opens in new tab)">Padded Shorts</a> 
+                    </div>
+                </div>
             </div>
             <div class="bike-section-media">
-                <img src="Assests/Images/clothing-pic_adobespark.jpg" alt="Man on bike pedalling towards camera">
+                <img src="Assests/Images/jersey-image.jpg" alt="Man on bike pedalling towards camera">
             </div>
         </div>
     </section>
@@ -92,20 +108,32 @@
                 <h2>The Helmat</h2>
                 <img src="Assests/Images/Types_of_Bicycle_Helmets.png" alt="Pictue of three different type bike helmets">
                 <p>A bicycle helmet is a type of helmet designed to attenuate impacts to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
-                Click<a href="#" target="_blank" rel="noopener" aria-label="Click here for more information on the helmet(Opens in a new tab)">Here</a>for more information on helmets.
+                <div class="button">
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Helmats(Opens in new tab)">Helmats</a>
+                    </div>
+                </div>
             </div>
             <div class="one-third-box main-box-color">
                 <h2>The Pump</h2>
                 <img src="Assests/Images/bike-pumps.jpg" alt="A picture of a bicycle pump">
                 <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always hand to take with you on a ride.</p>
-                Click<a href="#" target="_blank" rel="noopener" aria-label="Click here for more information on the Pump(Opens in a new tab)">Here</a>for more information on pumps.
+                <div class="button">
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Pumps(Opens in new tab)">Pumps</a>
+                    </div>
+                </div>
             </div>
             <div class="one-third-box main-box-color">
                 <h2>The Tools</h2>
                 <img src="Assests/Images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings"><!--Image was taken from Machine Mart website-->
                 <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must.</p>
                 <p>In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
-                Click<a href="#" target="_blank" rel="noopener" aria-label="Click here for more information on tools(Opens in a new tab)">Here</a>for more information on tools.
+                <div class="button">
+                    <div class="go-button">
+                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Tools(Opens in new tab)">Tools</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
