--- a/equipment.html
+++ b/equipment.html
@@ -15,16 +15,16 @@
 </head>
 <body>
     <header><!--Header contains Logo(linked) and symbol of bike-->
-        <div id="heading">
-            <a href="index.html" id="logo">
+        <div class="heading">
+            <a href="index.html" class="logo">
                 <h1>Cycling 101</h1>
             </a>
-            <i class="fas fa-biking" id="bike"></i>
+            <!--<i class="fas fa-biking" class="bike"></i>-->
         </div>
-        <div id="navigation">
+        <div class="navigation">
             <nav>
                 <!--Nav bar goes here, centered-->
-                <ul id="links">
+                <ul class="links">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
