--- a/index.html
+++ b/index.html
@@ -70,22 +70,26 @@
             </div>
         </div>
     </section>
-    <footer><!--Footer will contain links to social media-->
-        <h3>&copy Cycling 101</h3>
-        <ul class="media-links">
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Click to visit our Facebook Page(opens in new tab)"><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Click to visit our Instagram Page(opens in new tab)"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Click to visit our Twitter Page(opens in new tab)"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Click to visit our Youtube Page(opens in new tab)"><i class="fab fa-youtube-square"></i></a>
-            </li>
-        </ul>
+    <footer>
+        <div class="innerfooter1"><!--Footer will contain links to social media-->
+            <h3>&copy Cycling 101</h3>
+        </div>
+        <div class="innerfooter2">
+            <ul class="media-links">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Click to visit our Facebook Page(opens in new tab)"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Click to visit our Instagram Page(opens in new tab)"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Click to visit our Twitter Page(opens in new tab)"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Click to visit our Youtube Page(opens in new tab)"><i class="fab fa-youtube-square"></i></a>
+                </li>
+            </ul>
+        </div>
     </footer>
 
     <!--Font Awesome script-->
