--- a/equipment.html
+++ b/equipment.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="bike-section-media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
